# django-assessment

./: .env.dev  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
core/api/: admin.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
core/api/migrations/: 0001_initial.py  0002_customuser_created_at.py
core/core/: settings.py
